manifests/openbao/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openbao
  namespace: openbao
  annotations:
    external-dns.alpha.kubernetes.io/target: tint.cercado.io
spec:
  gatewayClassName: traefik
  listeners:
    - name: tls
      hostname: bao.cercado.io
      port: 8443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  parentRefs:
    - name: openbao
      sectionName: tls
  hostnames:
    - bao.cercado.io
  rules:
    - backendRefs:
        - name: openbao
          port: 8200
