manifests/openbao/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: openbao
  namespace: openbao
  annotations:
    external-dns.alpha.kubernetes.io/target: tint.cercado.io
spec:
  routes:
    - match: HostSNI(`bao.cercado.io`)
      services:
        - name: openbao
          port: 8200
  tls:
    passthrough: true
